# StaxDB

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
.github/workflows/: build.yml  publish.yml
src/: concat_rs.sh  main.cpp
src/benchmarks/: benchmarks.h  complex_query_bench.h  core_vs_maps.h  ffi_bench.h  graph_bench.h  mixed_workload_bench.h  tcp_bench.h  throughput_bench.h  tpcc.cpp  tpcc.h  tree_bench.h
src/stax_api/: staxdb_api.cpp  staxdb_api.h  tcp_server.cpp
src/stax_common/: binary_utils.h  common_types.hpp  constants.h  db_interfaces.h  geohash.hpp  os_file_extensions.cpp  os_file_extensions.h  os_platform_tools.h  roaring.cpp  roaring.h  spin_locks.h
src/stax_core/: node_allocator.cpp  node_allocator.hpp  stax_tree.cpp  stax_tree.hpp  value_store.hpp
src/stax_db/: arena_structs.h  db.cpp  db.h  path_engine.h  query.cpp  query.h  statistics.cpp  statistics.h
src/stax_graph/: graph_engine.cpp  graph_engine.h
src/stax_test_utils/: fractal_test_utils.h
src/stax_tx/: db_cursor.hpp  transaction.h
src/tests/: basic_correctness_tests.h  common_test_utils.h  compaction_tests.h  init_test.h  tests.h
stax_js/: .npmignore  LICENSE.md  bench.js  binding.gyp  index.js  package-lock.json  package.json  postinstall.js  prebuild.js  profile_bench.js  test.js
stax_js/stax_node_api/: database_wrap.cpp  database_wrap.h  graph_transaction_wrap.cpp  graph_transaction_wrap.h  kv_transaction_wrap.cpp  kv_transaction_wrap.h
